force-app/main/default/objects/Contract__c/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clinical Trial Site Agreement</fullName>
            </value>
            <value>
                <fullName>Confidentiality Deed/NDA</fullName>
            </value>
            <value>
                <fullName>Consulting Services Agreement (Non-Research)</fullName>
            </value>
            <value>
                <fullName>Contractors Agreement (services to My_Uni)</fullName>
            </value>
            <value>
                <fullName>Grant Funding Agreement</fullName>
            </value>
            <value>
                <fullName>Honorary/Adjunct/Visitors Deed</fullName>
            </value>
            <value>
                <fullName>Hospital/Health Services Agreement</fullName>
            </value>
            <value>
                <fullName>Industry PhD Agreement</fullName>
            </value>
            <value>
                <fullName>Intellectual Property Assignment Deed</fullName>
            </value>
            <value>
                <fullName>Licence Agreement (supplying)</fullName>
            </value>
            <value>
                <fullName>Licence Agreement (receiving)</fullName>
            </value>
            <value>
                <fullName>Master Services Agreement</fullName>
            </value>
            <value>
                <fullName>Material/Data Transfer Agreement (receiving)</fullName>
            </value>
            <value>
                <fullName>Material/Data Transfer Agreement (supplying)</fullName>
            </value>
            <value>
                <fullName>Memorandum of Understanding (MOU)</fullName>
            </value>
            <value>
                <fullName>Multi-Institutional Agreement (MIA)</fullName>
            </value>
            <value>
                <fullName>Novation Deed</fullName>
            </value>
            <value>
                <fullName>Partnership/Participation Agreement</fullName>
            </value>
            <value>
                <fullName>Research Collaboration Agreement</fullName>
            </value>
            <value>
                <fullName>Research Consulting Services Agreement</fullName>
            </value>
            <value>
                <fullName>Scholarship Agreement</fullName>
            </value>
            <value>
                <fullName>Start-up / Spin-out Related Agreement</fullName>
            </value>
            <value>
                <fullName>Student Researcher Deed</fullName>
            </value>
            <value>
                <fullName>Subcontract</fullName>
            </value>
            <value>
                <fullName>Variation / Termination Deed/Agreement</fullName>
            </value>
            <value>
                <fullName>Volunteer Deed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>