force-app/main/default/objects/Contract__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Agreement</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Child Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>