force-app/main/default/objects/Contract__c/fields/Count_of_Linked_Agreements_Animal__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Linked_Agreements_Animal__c</fullName>
    <label>Count of Linked Agreements Animal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>