force-app/main/default/objects/Contract__c/fields/Date_Agreement_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Date_Agreement_Initiated__c</fullName>
    <label>Date Agreement Initiated</label>
    <type>Date</type>
</CustomField>