force-app/main/default/objects/Contract__c/fields/Legal_User__c.field-meta.xml
<CustomField>
    <fullName>Legal_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agreements1</relationshipName>
    <type>Lookup</type>
</CustomField>