force-app/main/default/objects/Contract__c/fields/Number_of_Related_Parties__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Related_Parties__c</fullName>
    <label>Number of Related Parties</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>