force-app/main/default/objects/Contract__c/fields/Project_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Project_Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project or Proposal</label>
    <referenceTo>Project_Proposal__c</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>