force-app/main/default/objects/Contract__c/fields/Reasons_for_Contract_or_Variation__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Contract_or_Variation__c</fullName>
    <label>Reasons for Agreement or Variation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>