force-app/main/default/objects/Contract__c/fields/Research_Office_Contact__c.field-meta.xml
<CustomField>
    <fullName>Research_Office_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research Office Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agreements2</relationshipName>
    <type>Lookup</type>
</CustomField>