force-app/main/default/objects/Contract__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Preparing Instructions</fullName>
            </value>
            <value>
                <fullName>Instructions</fullName>
            </value>
            <value>
                <fullName>Engage Legal to Draft Variation</fullName>
            </value>
            <value>
                <fullName>Update Variation</fullName>
            </value>
            <value>
                <fullName>Notify Appropriate Stakeholders</fullName>
            </value>
            <value>
                <fullName>Create Letter</fullName>
            </value>
            <value>
                <fullName>Completing Template</fullName>
            </value>
            <value>
                <fullName>Engage Legal to Draft Contract</fullName>
            </value>
            <value>
                <fullName>Reviewing Draft</fullName>
            </value>
            <value>
                <fullName>Client Review</fullName>
            </value>
            <value>
                <fullName>Legal Review</fullName>
            </value>
            <value>
                <fullName>Update Contract</fullName>
            </value>
            <value>
                <fullName>Researcher Review</fullName>
            </value>
            <value>
                <fullName>With Other Party</fullName>
            </value>
            <value>
                <fullName>My Uni Signature</fullName>
            </value>
            <value>
                <fullName>Send to Client</fullName>
            </value>
            <value>
                <fullName>Client Countersign</fullName>
            </value>
            <value>
                <fullName>Receive Client Signed Copy</fullName>
            </value>
            <value>
                <fullName>Receive Executed Copy</fullName>
            </value>
            <value>
                <fullName>Notify of Variation Outcome</fullName>
            </value>
            <value>
                <fullName>My Uni Countersign</fullName>
            </value>
            <value>
                <fullName>My University Signature</fullName>
            </value>
            <value>
                <fullName>Send Signed Copy Back</fullName>
            </value>
            <value>
                <fullName>Submit to Research Office</fullName>
            </value>
            <value>
                <fullName>Return Signed Copy to Client</fullName>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>JCU Countersign</fullName>
                <isActive>false</isActive>
                <label>JCU Countersign</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>