force-app/main/default/objects/Contract__c/fields/TRIM_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>TRIM_Document_Number__c</fullName>
    <label>TRIM Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>