force-app/main/default/objects/Contract__c/fields/TRIM_URL__c.field-meta.xml
<CustomField>
    <fullName>TRIM_URL__c</fullName>
    <label>TRIM URL</label>
    <type>Url</type>
</CustomField>