force-app/main/default/objects/Contract__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Agreement Request</fullName>
            </value>
            <value>
                <fullName>Agreement Variation Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>