force-app/main/default/objects/Contract__c/fields/Update_Approval_Comments__c.field-meta.xml
<CustomField>
    <fullName>Update_Approval_Comments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Approval Comments</label>
    <type>Checkbox</type>
</CustomField>